[metadata]
name = emote_maker
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MemeLabs/EmoteMaker
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules = emote_maker
install_requires =
    Pillow
python_requires = >=3.7

[options.entry_points]
console_scripts =
    emote-maker = emote_maker:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
